objects/ACP_Customer_Overview__c.object
<CustomObject>
    <description>Shashi 04/24/17 Added for Account Plan.</description>
    <fields>
        <fullName>ACP_Account_Plan__c</fullName>
        <label>ACP Account Plan</label>
        <referenceTo>ACP_Account_Plan__c</referenceTo>
        <relationshipLabel>Customers Overview</relationshipLabel>
        <relationshipName>Customers_Overview</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACP_Growth__c</fullName>
        <label>Growth</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACP_Location_Focus__c</fullName>
        <label>Focus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Manufacturing__c</fullName>
        <label>Manufacturing</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Market_Percent__c</fullName>
        <label>%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACP_Market_Trend__c</fullName>
        <label>Trend</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Up</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Market__c</fullName>
        <label>Market</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Purchasing__c</fullName>
        <label>Purchasing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Region_Percent__c</fullName>
        <label>%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACP_Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Regions_Trend__c</fullName>
        <label>Trend</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Up</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Revenue__c</fullName>
        <label>Revenue</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Vendor_Focus__c</fullName>
        <label>Focus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Vendor__c</fullName>
        <label>Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Year_Text__c</fullName>
        <formula>TEXT(ACP_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Year__c</fullName>
        <inlineHelpText>Editable</inlineHelpText>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Overview</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>ACP_Account_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>Customer Overview Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers Overview</pluralLabel>
    <recordTypes>
        <fullName>End_Markets</fullName>
        <active>true</active>
        <label>End Markets</label>
    </recordTypes>
    <recordTypes>
        <fullName>Key_Engineering_Design_locations</fullName>
        <active>true</active>
        <label>Key Engineering /Design locations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Key_Manufacturing_Purchasing_Locations</fullName>
        <active>true</active>
        <label>Key Manufacturing /Purchasing Locations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Key_Vendors_in_Supply_Chain</fullName>
        <active>true</active>
        <label>Key Vendors in Supply Chain</label>
    </recordTypes>
    <recordTypes>
        <fullName>Regions</fullName>
        <active>true</active>
        <label>Regions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Revenue_and_Growth</fullName>
        <active>true</active>
        <label>Revenue and Growth</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>